--- a/login.wxml
+++ b/login.wxml
@@ -12,7 +12,7 @@
 
 <div class="form-structor">
 	<div class="signup">
-		<h2 class="form-title" id="signup"><span>或</span>注册</h2>
+		<h2 class="form-title" id="signup">注册</h2>
 		<div class="form-holder">
 			<input type="text" class="input" placeholder="用户名" />
 			<input type="email" class="input" placeholder="邮箱" />
@@ -22,7 +22,7 @@
 	</div>
 	<div class="login slide-up">
 		<div class="center">
-			<h2 class="form-title" id="login"><span>或</span>登录</h2>
+			<h2 class="form-title" id="login">登录</h2>
 			<div class="form-holder">
 				<input type="email" class="input" placeholder="邮箱" />
 				<input type="password" class="input" placeholder="密码" />
